[package]
name = "flashq-server"
version = "0.4.0"
edition = "2021"

[lib]
name = "flashq_server"
path = "src/lib.rs"

[[bin]]
name = "flashq-server"
path = "src/main.rs"

[features]
default = []
io-uring = []  # Enable io_uring detection (Linux only)

[dependencies]
# Async Runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Serialization - OPTIMIZED
serde = { version = "1", features = ["derive"] }
serde_json = "1"                # Fallback for compatibility
sonic-rs = "0.5"                # Fastest JSON parser (SIMD, 30% faster than simd-json)
rmp-serde = "1.3"               # MessagePack binary protocol (3-5x faster, 40% smaller)

# Concurrency - OPTIMIZED
parking_lot = "0.12"            # Faster locks than std (2x)
mimalloc = { version = "0.1", default-features = false }  # Fast allocator (15% faster)
dashmap = "6"                   # Lock-free concurrent HashMap (40% faster lookups)
compact_str = "0.8"             # Inline strings up to 24 chars (zero heap alloc)

# HTTP
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors"] }

# OpenAPI Documentation
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# Hashing - OPTIMIZED
gxhash = "3"                    # Fastest hasher (AES-NI, 20-30% faster than FxHash)

# IDs - OPTIMIZED
ulid = "1.1"                    # Sortable IDs, faster than UUID v4

# Time
croner = "2.0"                  # Full 6-field cron expression parsing
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

# Database (SQLite embedded)
rusqlite = { version = "0.32", features = ["bundled", "backup"] }

# S3-compatible backup (AWS S3, Cloudflare R2, MinIO, etc.)
aws-sdk-s3 = { version = "1.65", features = ["behavior-version-latest"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"
flate2 = "1.0"  # gzip compression for backups

# HTTP Client
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"

# gRPC
tonic = "0.13"
prost = "0.13"

# Utils
once_cell = "1.19"
futures = "0.3"
url = "2"                           # URL parsing for webhook validation
atty = "0.2"                        # Terminal detection for colored output

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# System metrics
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[build-dependencies]
tonic-build = "0.13"

[profile.release]
lto = "fat"                     # Link-time optimization
codegen-units = 1               # Better optimization
panic = "abort"                 # No unwinding overhead
strip = true                    # Smaller binary
opt-level = 3                   # Maximum optimization
overflow-checks = false         # Disable overflow checks (faster)
debug = false                   # No debug info
incremental = false             # Full rebuild for max optimization

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "queue_benchmark"
harness = false

[profile.dev]
opt-level = 1                   # Some optimization in dev for faster tests

[profile.bench]
debug = true                    # Enable debug info for profiling
